# Examen_Suficiencia_P4

./: README.md  exit.ps1  pyproject.toml  start.ps1
bus/: admin.py  forms.py  models.py  urls.py  views.py
core/: settings.py  urls.py
employee/: forms.py  models.py  urls.py  views.py
fixtures/: buses.json  employees.json  routes.json
route/: admin.py  models.py  urls.py  views.py
static/css/: styles.css
static/js/: scripts.js
templates/: index.html
templates/components/: navbar.html
templates/includes/: head.html  scripts.html
templates/pages/: buses.html  employees.html  form-edit-bus.html  form-edit-employee.html  form-edit-route.html  home.html  routes.html  signin.html
website/: urls.py  views.py
